# libcouch

./: .gitignore  Makefile  Makefile.am
config/: Makefile  Makefile.darwin  Makefile.linux  Makefile.sunos
include/libcouch/: couch.h  types.h  visibility.h
src/: document.c  error.c  instance.c  internal.h
tests/: testapp.c
